--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -2,3 +2,9 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: app-setup.yml
+
+
+- name: app setup
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: nodejs.yml
