--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -37,7 +37,7 @@
   when: catalogue_output.stdout |  int < 0
 
 - name: start and enabled catalogue service
-  nsible.builtin.systemd_service:
+  ansible.builtin.systemd_service:
     name: catalogue
     state: started
     enabled: yes
