--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
 inventory = ./inventory.ini
-vault_password_file = /etc/ansible/mysql_vault_password.txt
+; vault_password_file = /etc/ansible/mysql_vault_password.txt
