--- a/roles/common/tasks/system-setup.yml
+++ b/roles/common/tasks/system-setup.yml
@@ -1,4 +1,4 @@
-- name: copy {{ component }} file
+- name: copy {{ component }} service
   ansible.builtin.template:
     src: "{{ component }}.service.j2"
     dest: "/etc/systemd/system/{{ component }}.service"
