--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,3 +1,5 @@
 MONGODB_HOST: mongodb.awspractice.store
 REDIS_HOST: redis.awspractice.store
 CATALOGUE_HOST: catalogue.awspractice.store
+CART_HOST: cart.awspractice.store
+MYSQL_HOST: mysql.awspractice.store
