--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -7,3 +7,21 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: java.yml
+
+- name : load shipping data into my sql
+  community.mysql.mysql_db:
+    state: import
+    name: all
+    login_host: mysql.awspractice.store
+    login_user: root 
+    login_password: RoboShop@1 
+    target: "{{ item }}"
+  loop:
+  - /app/db/schema.sql
+  - /app/db/app-user.sql 
+  - /app/db/master-data.sql
+
+- name: app setup
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: system-setup.yml
