--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -1,15 +1,18 @@
-- name: app setup
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: app-setup.yml
+  - name: installing maven
+    ansible.builtin.package:
+      name: "{{ item }}"
+      state: present
+    loop:
+    - maven
+    - mysql
 
-- name: app setup
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: python.yml
+  - name: installing dependencies
+    ansible.builtin.command: mvn clean package
+    args:
+        chdir: /app
 
 
-- name: app setup
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: system-setup.yml
+  - name: move the jar files
+    ansible.builtin.command: mv target/{{ component }}-1.0.jar {{ component }}.jar
+    args:
+        chdir: /app
