--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -40,13 +40,7 @@
     ansible.builtin.template:
       src: nginx.conf.j2
       dest: /etc/nginx/nginx.conf
-
-  - name: restart ngix
-    ansible.builtin.service:
-      state: restarted
-      name: nginx 
-      enabled: yes
-    notify: restart nginx
+    notify: restatr nginx
 
   
 
