--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -40,7 +40,7 @@
     ansible.builtin.template:
       src: nginx.conf.j2
       dest: /etc/nginx/nginx.conf
-    notify: restatr nginx
+    notify: restart nginx
 
   
 
