--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -40,7 +40,12 @@
     ansible.builtin.template:
       src: nginx.conf.j2
       dest: /etc/nginx/nginx.conf
-    notify: restart nginx
+    
+  - name: restart ngix
+    ansible.builtin.service:
+      state: restarted
+      name: nginx 
+      enabled: yes
 
   
 
